== 0.9.2
* Configure your favourite waiting time, password length and password char pool using ENV vars
* More flexible command line argument parsing, allows setting options
* Creating new safes also creates the directory for them and sets permissions to 0600

== 0.9.1
* Add password confirmation when changing master password

== 0.9.0
* It's working, again! (Sorry for the broken gem version that long time...)
* Cucumber spec suite :D [based on the one by thecatwasnot]
* Ruby 1.9 only
* Colorized output using the paint gem
* Fix an encoding issue
* New redundancy data mechanism (old file format not compatible anymore)
* Uses PWS environment variable to determine the password file location (default is still: ~/.pws)
* Easy namespace support for different password files
* Add ability to rename entry keys
* Remove descriptions (keep it simple)
* Different generate method interface
* Uses SecureRandom instead of rand
* Fix removing passwords
* Lots of little fixes and tweaks
* New default clipboard time: 10 seconds. Another feature: Old clipboard content gets restored after that time

== See gist https://gist.github.com/658494 for older changes